# spsgenai

./: Dockerfile  README.md  main.py  pyproject.toml  train_cnn.py
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  model.py  trainer.py  utils.py
models/: cifar10_cnn.pth
