[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "jupyterlab>=4.6.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "spacy>=3.8.14",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "uvicorn[standard]>=0.49.0",
]
